# api-flattener

./: README.md  USAGE.md  api_spec.json  api_spec_corrected.json  flattened_swagger.yaml  pyproject.toml
.github/workflows/: test.yml
src/api_flattener/cli/: commands.py
src/api_flattener/core/: flattener.py
src/api_flattener/utils/: io.py  reference.py
tests/: test_flattener.py
